# ohtu_palautusrepo

./: README.md  pyproject.toml
viikko1/nhl-statistics-1/: .coverage
viikko1/nhl-statistics-1/src/: statistics_service.py
viikko1/nhl-statistics-1/src/tests/: nhl_test.py
viikko1/riippuvuuksien-injektointi-1/src/: index.py
viikko2/git-branch-harjoitus/: index.py  muutos.txt  muutos2.txt
viikko2/nhl-reader/: pyproject.toml
viikko2/nhl-reader/src/: index.py  player.py
viikko2/project-reader/src/: project.py  project_reader.py
viikko3/hello-robot/: log.html  output.xml  report.html
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/int-joukko/src/: int_joukko.py
viikko5/laskin/src/: kayttoliittyma.py
viikko5/tennis/src/: tennis_game.py
viikko6/query-language/src/: index.py  matchers.py  query_builder.py  tempCodeRunnerFile.py
