[tool.poetry]
name = "ohtu-palautusrepo"
version = "0.1.0"
description = ""
authors = ["mlenni <lenni.martikainen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tomli = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false
